--- a/OGP1617-Asteroids/.classpath
+++ b/OGP1617-Asteroids/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="src-provided"/>
 	<classpathentry kind="src" path="tests"/>
-	<classpathentry kind="src" path="exception"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/AnnotationsDoclets.jar">
@@ -11,6 +10,10 @@
 			<attribute name="javadoc_location" value="http://www.cs.kuleuven.be/books/OOPWithJava/doc/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Martijn/Documents/Univ/2e fase Bbi/Semester 2/Objectgericht Programmeren/AnnotationsDoclets.jar/AnnotationsDoclets.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-4.7-complete.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.antlr.org/api/Java/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
