--- a/OGP1617-Asteroids/.classpath
+++ b/OGP1617-Asteroids/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/Martijn/Documents/Univ/2e fase Bbi/Semester 2/Objectgericht Programmeren/AnnotationsDoclets.jar/AnnotationsDoclets.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Martijn/Downloads/Univ/Semester 4 - Downloads/antlr-4.7-complete.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
